--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
         <img src="Assets/favicon.svg">
        </div>
 
+    
     <div class="link-container">
-        <h1>Portfolio</h1>
-        <h1>Resumé</h1>
-        <h1><a href="https://www.instagram.com/"></a>Instagram</h1>
-        <h1>Contact Me</h1>
+        <h1><a href="https://jdepari13.github.io/">Portfolio</a></h1>
+        <h1><a href="Assets/portfolio_resume.pdf">Resume</a></h1>
+        <h1><a href="https://www.instagram.com/jilldep.art/">Instagram</h1></a>
+        <h1><a href="https://www.linkedin.com/in/jill-depari-936733203/">Contact Me</a></h1>
     </div>
+</div>
+    
 
 
 </body>
